fix: layout bugs on mac

--- a/css/photographerPage.css
+++ b/css/photographerPage.css
@@ -28,6 +28,7 @@ main{
     justify-content: space-between;
     background-color: #FAFAFA;
     height: 300px;
+    padding: 0 3vw;
 }
 
 .photographer_header img {
@@ -71,7 +72,7 @@ main{
     align-items: center;
     justify-content: flex-start;
     gap: 15px;
-    margin-bottom: 50px;
+    margin: 25px 0 50px 0;
 }
 
 .dropdown {
@@ -269,6 +270,15 @@ form {
     flex-direction: column;
     align-items: flex-start;
     gap: 10px;
+    overflow-y: auto;
+
+    /* Cacher la barre de défilement pour Chrome, Safari et Opera */
+    ::-webkit-scrollbar {
+        display: none;
+    }
+
+    /* Cacher la barre de défilement pour Firefox */
+    scrollbar-width: none;
 }
 
 form label {
